# session_cpp

./: .gitignore  CMakeLists.txt  NURBSCURVE_DOCUMENTATION.md  README.md  WINDOWS_BUILD_FIX.md  annen.cpp  bench_mesh.cpp  bool_all.pb  bool_bench.cpp  bool_diff.pb  bool_intersect.pb  bool_union.pb  build.bat  build.sh  build_docs.sh  doc.sh  example_loft_holes.cpp  export_to_wood_xml.cpp  gen_datasets.py  gen_out.txt  main.cpp  main_1.cpp  main_2.cpp  main_3.cpp  main_4.cpp  main_5.cpp  main_5_joint_lib.h  main_6.cpp  main_7.cpp  main_mesh_offset.cpp  main_reciprocal.cpp  main_wood_fold_1.cpp  main_wood_fold_2.cpp  mesh_offset_test.pb  mesh_offset_test_dump.json  old_main.cpp  test.bat  test.sh  test_arrow.json  test_boundingbox.json  (+28 more)
.github/workflows/: build.yml
bash/: rename_nurbscurve.sh  rename_nurbssurface.sh
build_no_sse2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MyProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bool_bench.vcxproj  bool_bench.vcxproj.filters  main_1.vcxproj  main_1.vcxproj.filters  main_2.vcxproj  main_2.vcxproj.filters  main_3.vcxproj  main_3.vcxproj.filters  main_4.vcxproj  main_4.vcxproj.filters  main_5.vcxproj  main_5.vcxproj.filters  options-pinned.h  point_minitest.vcxproj  point_minitest.vcxproj.filters  proto_objects.vcxproj  proto_objects.vcxproj.filters  session_core.vcxproj  session_core.vcxproj.filters
docs/: DOCS.md  Doxyfile  README.md  doc_config.txt  header.html  mainpage.dox
python/: bvh_query_aabb_example.py
serialization/: test_arrow.json  test_beam_element.json  test_boundingbox.json  test_brep.json  test_color.json  test_column_element.json  test_edge.json  test_element.json  test_graph.json  test_line.json  test_matrix.json  test_mesh.json  test_mesh_offset.json  test_nurbscurve.json  test_nurbssurface.json  test_nurbssurface_trimmed.json  test_obb.json  test_objects.json  test_objects_component.json  test_plane.json  test_plate_element.json  test_plate_element_joinery.json  test_point.json  test_pointcloud.json  test_polyline.json  test_quaternion.json  test_session.json  test_session_component.json  test_tree.json  test_treenode.json  test_trimmedsurface.json  test_vector.json  test_vertex.json  test_xform.json
session_docs/: IMPLEMENTATION_SUMMARY.md  README.md  build_docs.bat  build_docs.sh  index.html
src/: aabb.cpp  aabb.h  aabb_test.cpp  arrow.cpp  arrow.h  arrow_test.cpp  boolean_polyline.cpp  boolean_polyline.h  boolean_polyline_test.cpp  boundingbox.cpp  boundingbox.h  boundingbox_test.cpp  box_util.h  brep.cpp  brep.h  brep_test.cpp  bvh.cpp  bvh.h  bvh_test.cpp  closest.cpp  closest.h  closest_test.cpp  color.cpp  color.h  color_test.cpp  convex_hull.cpp  convex_hull.h  convex_hull_test.cpp  cylinder.cpp  cylinder.h  cylinder_test.cpp  edge.cpp  edge.h  edge_test.cpp  element.cpp  element.h  element_beam_test.cpp  element_column_test.cpp  element_plate_test.cpp  element_test.cpp  (+170 more)
src/catch/: catch_amalgamated.cpp
src/yaml/: yaml.cpp  yaml.hpp
wood/: README.md  main_wood_00_hello.cpp  main_wood_01_new_geometry.cpp  main_wood_02_joint_types.cpp  main_wood_03_new_joint.cpp  main_wood_04_all_datasets.cpp  main_wood_cdt_probe.cpp  wood_beams.cpp  wood_cut.h  wood_element.cpp  wood_element.h  wood_face_to_face.cpp  wood_face_to_face.h  wood_globals.cpp  wood_internal.cpp  wood_joint.cpp  wood_joint.h  wood_joint_detection.cpp  wood_joint_lib.h  wood_main.cpp  wood_merge.cpp  wood_merge.h  wood_session.h  wood_test.cpp
wood/config/: hello.yml  type_beams_name_phanomema_node.yml  type_plates_name_cross_and_sides_corner.yml  type_plates_name_cross_brussels_sports_tower.yml  type_plates_name_cross_corners.yml  type_plates_name_cross_ibois_pavilion.yml  type_plates_name_cross_square_reciprocal_iseya.yml  type_plates_name_cross_square_reciprocal_two_sides.yml  type_plates_name_cross_vda_corner.yml  type_plates_name_cross_vda_hexshell.yml  type_plates_name_cross_vda_hexshell_reciprocal.yml  type_plates_name_cross_vda_shell.yml  type_plates_name_cross_vda_single_arch.yml  type_plates_name_hex_block_rossiniere.yml  type_plates_name_hexbox_and_corner.yml  type_plates_name_joint_linking_vidychapel_corner.yml  type_plates_name_joint_linking_vidychapel_full.yml  type_plates_name_joint_linking_vidychapel_one_axis_two_layers.yml  type_plates_name_joint_linking_vidychapel_one_layer.yml  type_plates_name_side_to_side_edge_inplane_2_butterflies.yml  type_plates_name_side_to_side_edge_inplane_differentdirections.yml  type_plates_name_side_to_side_edge_inplane_hexshell.yml  type_plates_name_side_to_side_edge_inplane_hilti.yml  type_plates_name_side_to_side_edge_inplane_outofplane_simple_corners.yml  type_plates_name_side_to_side_edge_inplane_outofplane_simple_corners_combined.yml  type_plates_name_side_to_side_edge_inplane_outofplane_simple_corners_different_lengths.yml  type_plates_name_side_to_side_edge_outofplane_box.yml  type_plates_name_side_to_side_edge_outofplane_box_miter.yml  type_plates_name_side_to_side_edge_outofplane_dodecahedron.yml  type_plates_name_side_to_side_edge_outofplane_folding.yml  type_plates_name_side_to_side_edge_outofplane_icosahedron.yml  type_plates_name_side_to_side_edge_outofplane_inplane_and_top_to_top_hexboxes.yml  type_plates_name_side_to_side_edge_outofplane_octahedron.yml  type_plates_name_side_to_side_edge_outofplane_tetra.yml  type_plates_name_top_to_side_and_side_to_side_outofplane_annen_box.yml  type_plates_name_top_to_side_and_side_to_side_outofplane_annen_box_pair.yml  type_plates_name_top_to_side_and_side_to_side_outofplane_annen_corner.yml  type_plates_name_top_to_side_and_side_to_side_outofplane_annen_grid_full_arch.yml  type_plates_name_top_to_side_and_side_to_side_outofplane_annen_grid_small.yml  type_plates_name_top_to_side_box.yml  (+5 more)
wood/joints/: b_0.h  b_custom.h  cr_c_ip_0.h  cr_c_ip_1.h  cr_c_ip_2.h  cr_c_ip_3.h  cr_c_ip_4.h  cr_c_ip_5.h  cr_c_ip_custom.h  cr_c_ip_shared.h  helpers.h  ss_e_ip_0.h  ss_e_ip_1.h  ss_e_ip_2.h  ss_e_ip_3.h  ss_e_ip_4.h  ss_e_ip_5.h  ss_e_ip_custom.h  ss_e_op_0.h  ss_e_op_1.h  ss_e_op_17.h  (+18 more)
(+210 files in other folders)
